--- a/mediarepo-ui/src/app/components/shared/sidebar/file-search/file-search.component.scss
+++ b/mediarepo-ui/src/app/components/shared/sidebar/file-search/file-search.component.scss
@@ -1,3 +1,5 @@
+@import "src/colors";
+
 .full-width {
     width: auto;
     min-width: 100%;
@@ -7,7 +9,6 @@
     width: calc(100% - 64px);
     height: 2.7em;
     padding: 0.5em 0;
-    box-shadow: 0 0 1em 0.1em rgba(0, 0, 0, 0.05) inset;
     overflow-x: auto;
     overflow-y: hidden;
 }
@@ -93,12 +94,12 @@
 }
 
 .selectable-tag:hover {
-    background-color: darken(dimgrey, 10);
+    background-color: $background-lighter-05;
 }
 
 .selectable-tag:active {
     cursor: pointer;
-    background-color: darken(dimgrey, 5);
+    background-color: $background-lighter-10;
 }
 
 cdk-virtual-scroll-viewport {
@@ -136,4 +137,17 @@ mat-divider {
     width: calc(100% - 2em);
     margin-left: 1em;
     margin-right: 1em;
+}
+
+.tag-input-item {
+    background-color: $background-lighter-10;
+    border-radius: 1em;
+}
+
+mat-form-field:focus {
+    background-color: dimgrey;
+}
+
+#sort-button {
+    background-color: $background-lighter-10;
 }
